finally fixed the contrast error

--- a/_css/styles.css
+++ b/_css/styles.css
@@ -12,11 +12,10 @@
 
 } */
 
-a:link { color:#4E7F6F; } /* unvisited link */
-a:visited { color:#102C23; } /* visited link */
-a:hover { color:whites; } /* mouse over link */
-a:active { color:#81B1A1; }  /* selected link */
-
+a:link { color:#f2fffa; } /* unvisited link */
+a:visited { color:#50ffbc; } /* visited link */
+a:hover { color:#fff09e; } /* mouse over link */
+a:active { color:#ffb2a8; }  /* selected link */
 
 .p1 {
 	font-family: "Courier New", "Lucida Console", monospace;
@@ -29,61 +28,63 @@ a:active { color:#81B1A1; }  /* selected link */
 }
 
 
-
+.accent {
+  height: 60%;
+  width: 23%;
+  float: left;
+  padding: 1em;
+  background-color: #30547E;
+}
+.starfile {
+  padding: 2em;
+}
+.zester {
+  color: #E3EEEA;
+}
 
 
 * {
   box-sizing: border-box;
 }
-
 header {
   width: 100%;
   height: 10%;
   color: #E3EEEA;
   padding: 1em;
-  background: #4E7F6F no-repeat 80% 10px;
+  background: #23483C no-repeat 80% 10px;
 }
-
 nav {
   width: 100%;
-  height: 1.5em;
+  height: 2.5em;
   padding-left: 1em;
-  background-color: #E3EEEA;
-  color: #273F37;
+  background-color: #23483C;
+  color: #E3EEEA;
 }
-
 a {
   color: #E3EEEA;
 }
 aside {
   width: 20%;
   height: 100%;
-  float: left;
+  float: right;
   background-color: #273F37;
   padding: .5em;
 }
-
+article {
+  width: 40%;
+  height: 50%;
+  float: left;
+  padding: 1em;
+}
 footer {
   width: 100%;
-  height: 8em;
+  height: 100%;
   clear: both;
   color: #E3EEEA;
   text-align: center;
   padding-top: .5em;
-  background: #4E7F6F no-repeat left bottom;
+  background: #102C23 no-repeat left bottom;
 }
-
-main {
-    background-color: white;
-}
-
-/* section {
-  width: 40%;
-  height: 100%;
-  float: left;
-  background-color: #4E7F6F;
-  padding: .5em;
-} */
 
 
 /* main {
